--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ services:
         working_dir: /application
         volumes:
             - '.:/application'
+            - mysql_data:/var/lib/mysql
         environment:
             - MYSQL_ROOT_PASSWORD=rootpassword
             - MYSQL_DATABASE=classifieds
@@ -32,3 +33,6 @@ services:
             - '.:/application'
             - './phpdocker/php-fpm/php-ini-overrides.ini:/etc/php/8.4/fpm/conf.d/99-overrides.ini'
             - './phpdocker/php-fpm/php-ini-overrides.ini:/etc/php/8.4/cli/conf.d/99-overrides.ini'
+volumes:
+    mysql_data:
+        driver: local
