--- a/phpdocker/php-fpm/Dockerfile
+++ b/phpdocker/php-fpm/Dockerfile
@@ -4,5 +4,6 @@ WORKDIR "/application"
 RUN apt-get update \
     && apt-get -y --no-install-recommends install \
         php8.4-mysql \
+        php8.4-sqlite3 \
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/* /usr/share/doc/*
