--- a/phpdocker/php-fpm/Dockerfile
+++ b/phpdocker/php-fpm/Dockerfile
@@ -5,5 +5,6 @@ RUN apt-get update \
     && apt-get -y --no-install-recommends install \
         php8.4-mysql \
         php8.4-sqlite3 \
+        php8.4-gd \
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/* /usr/share/doc/*
